--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="red">#DC143C</color>
+    <color name="blue">#00aaff</color>
+    <color name="green">#99ff00</color>
+    <color name="red">#ff0000</color>
 </resources>
